[assets] add Font Awesome
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,12 @@
  * file per style scope.
  *
  *= require bootstrap/bootstrap
+ */
+
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
+/*
  *= require_tree .
  *= require_self
  */
