--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>DeedsRails</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <%= render 'shared/head' %>
+  </head>
+  <body>
+  <%= yield %>
 
-<%= yield %>
-
-</body>
+  <%= render 'shared/after_footer' %>
+  </body>
 </html>
