[control][view] Basic functionality for Storages
    storages GET    /storages(.:format)          storages#index
             POST   /storages(.:format)          storages#create
 new_storage GET    /storages/new(.:format)      storages#new
edit_storage GET    /storages/:id/edit(.:format) storages#edit
     storage GET    /storages/:id(.:format)      storages#show
             PATCH  /storages/:id(.:format)      storages#update
             PUT    /storages/:id(.:format)      storages#update
             DELETE /storages/:id(.:format)      storages#destroy

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/assets/stylesheets/framework_and_overrides.scss
+++ b/app/assets/stylesheets/framework_and_overrides.scss
@@ -1,5 +1,4 @@
-//= require tether/tether
-//= require bootstrap/bootstrap
+@import 'frameworks/bootstrap';
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
