--- a/app/views/storages/index.html.erb
+++ b/app/views/storages/index.html.erb
@@ -3,6 +3,7 @@
   <span class="btn-group">
     <%= link_to new_storage_url,
                 class: 'btn btn-sm btn-primary',
+                id: 'btn-new-storage',
                 title: 'Add new Storage',
                 data: { toggle: 'tooltip' },
                 remote: true do -%>
