--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -7,6 +7,11 @@
       <% end %>
     </li>
     <li class="nav-item">
+      <%= link_to archives_path, class: 'nav-link' do %>
+          <i class="fi=list"></i> <span>Archives</span>
+      <% end %>
+    </li>
+    <li class="nav-item">
       <%= link_to storages_path, class: 'nav-link' do %>
         <i class="fi=list"></i> <span>Storages</span>
       <% end %>
