[features] refactor features
- reorder steps
- extract common steps

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-faded">
+<nav id="top-nav-bar" class="navbar navbar-light bg-faded">
   <a class="navbar-brand">Deeds</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
