--- a/app/views/storages/_storage.html.erb
+++ b/app/views/storages/_storage.html.erb
@@ -3,30 +3,9 @@
   <td class="col-storage-notes"><%= storage.notes %></td>
   <td class="col-storage-actions">
     <div class="btn-group btn-group-sm">
-      <%= link_to storage_path(storage.id),
-                  class: 'btn btn-sm btn-outline-info',
-                  id: "btn-storage-show-#{storage.id}",
-                  title: 'Show Details', data: { toggle: 'tooltip' },
-                  remote: true do %>
-        <%= icon('search', class: 'fa-fw') %>
-      <% end %>
-      <%= link_to edit_storage_path(storage.id),
-                  class: 'btn btn-sm btn-outline-primary',
-                  id: "btn-storage-edit-#{storage.id}",
-                  title: 'Edit Storage', data: { toggle: 'tooltip' },
-                  remote: true do %>
-        <%= icon('pencil', class: 'fa-fw') %>
-      <% end %>
-      <%= link_to storage_path(storage.id), method: :delete,
-                  class: 'btn btn-sm btn-outline-danger',
-                  id: "btn-storage-delete-#{storage.id}",
-                  title: 'Delete Storage',
-                  data: {
-                      confirm: 'Do you really want to delete this item?',
-                      toggle: 'tooltip'
-                  } do %>
-        <%= icon('trash', class: 'fa-fw') %>
-      <% end %>
+      <%= link_to_show_entity storage %>
+      <%= link_to_edit_entity storage %>
+      <%= link_to_destroy_entity storage %>
     </div>
   </td>
 </tr>
