--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -19,6 +19,7 @@
       <th class="col-archive-title">Title</th>
       <th class="col-archive-abbr">Abbreviation</th>
       <th class="col-archive-notes">Notes</th>
+      <th class="col-archive-assoc">Associations</th>
       <th class="col-archive-actions">Actions</th>
     </tr>
     </thead>
