--- a/app/views/archives/_archive.html.erb
+++ b/app/views/archives/_archive.html.erb
@@ -2,6 +2,15 @@
   <td class="col-archive-title"><%= archive.title %></td>
   <td class="col-archive-abbr"><%= archive.abbr %></td>
   <td class="col-archive-notes"><%= archive.notes %></td>
+  <td class="col-storage-assoc">
+    <%= content_tag :label,
+                    class: 'tag tag-default',
+                    title: "#{Storage.model_name.plural.humanize} linked",
+                    data: { toggle: 'tooltip' } do %>
+        <%= archive.storages.count %>
+        <%= icon('archive', class: 'fa-fw') %>
+    <% end %>
+  </td>
   <td class="col-archive-actions">
     <div class="btn-group btn-group-sm">
       <%= link_to_show_entity archive %>
