--- a/app/views/storages/index.html.erb
+++ b/app/views/storages/index.html.erb
@@ -18,6 +18,7 @@
     <tr>
       <th class="col-storage-title">Title</th>
       <th class="col-storage-notes">Notes</th>
+      <th class="col-storage-assoc">Associations</th>
       <th class="col-storage-actions">Actions</th>
     </tr>
     </thead>
