[control][view] filtered index tables
for Storage and Archive

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -12,6 +12,10 @@
   </span>
 </h1>
 
+<% if @storage %>
+  <p class="lead">for Storage: <%= @storage.title %></p>
+<% end %>
+
 <div id="archives-table">
   <table class="table table-hover table-sm" id="archives">
     <thead>
