--- a/app/views/storages/_inner_show.html.erb
+++ b/app/views/storages/_inner_show.html.erb
@@ -16,7 +16,7 @@
   <div class="row">
     <label class="col-md-3"><strong><%= Storage.human_attribute_name :archives %></strong></label>
     <ul class="col-md-9 list-group list-group-flush" id="storage-archives-accordion" role="tablist" aria-multiselectable="true">
-      <%= render partial: 'archives/oneline', collection: storage.archives, as: :archive %>
+      <%= render partial: 'archives/nested_show', collection: storage.archives, as: :archive %>
     </ul>
   </div>
 <% end %>
