--- a/app/views/archives/_nested_show.html.erb
+++ b/app/views/archives/_nested_show.html.erb
@@ -2,7 +2,7 @@
   <div id="archive-<%= archive.id %>" class="list-group-item-heading" role="tab">
     <%= archive.title %>
     (<%= archive.abbr %>)
-    <a class="pull-right btn btn-sm btn-outline-info collapsed"
+    <a class="pull-right btn btn-sm collapsed"
        aria-controls="archive-<%= archive.id %>-content"
        aria-expanded="false"
        href="#archive-<%= archive.id %>-content"
