--- a/app/views/storages/_nested_show.html.erb
+++ b/app/views/storages/_nested_show.html.erb
@@ -1,7 +1,7 @@
 <li class="list-group-item">
   <div id="storage-<%= storage.id %>" class="list-group-item-heading" role="tab">
     <%= storage.title %>
-    <a class="pull-right btn btn-sm btn-outline-info collapsed"
+    <a class="pull-right btn btn-sm collapsed"
        aria-controls="storage-<%= storage.id %>-content"
        aria-expanded="false"
        href="#storage-<%= storage.id %>-content"
