--- a/app/views/storages/_storage.html.erb
+++ b/app/views/storages/_storage.html.erb
@@ -2,10 +2,10 @@
   <td class="col-storage-title"><%= storage.title %></td>
   <td class="col-storage-notes"><%= storage.notes %></td>
   <td class="col-storage-assoc">
-    <%= content_tag :label,
-                    class: 'tag tag-default',
-                    title: "#{Archive.model_name.plural.humanize} linked",
-                    data: { toggle: 'tooltip' } do %>
+    <%= link_to storage_archives_path(storage_id: storage.id),
+                class: 'btn btn-sm btn-secondary',
+                title: "show #{Archive.model_name.plural.humanize} linked",
+                data: { toggle: 'tooltip' } do %>
       <%= storage.archives.count %>
       <%= icon('book', class: 'fa-fw') %>
     <% end %>
