--- a/app/views/storages/index.html.erb
+++ b/app/views/storages/index.html.erb
@@ -1,7 +1,7 @@
 <h1>
   Storages
   <span class="btn-group">
-    <%= link_to new_storage_url,
+    <%= link_to new_storage_path,
                 class: 'btn btn-sm btn-primary',
                 id: 'btn-new-storage',
                 title: 'Add new Storage',
