[control][view] 'complete' Archive Source
including linkage between Archive and Source

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/archives/_archive.html.erb
+++ b/app/views/archives/_archive.html.erb
@@ -10,6 +10,13 @@
       <%= archive.storages.count %>
       <%= icon('archive', class: 'fa-fw') %>
     <% end %>
+    <%= link_to archive_sources_path(archive_id: archive.id),
+                class: 'btn btn-sm btn-secondary',
+                title: "show #{Source.model_name.plural.humanize} linked",
+                data: { toggle: 'tooltip' } do %>
+      <%= archive.sources.count %>
+      <%= icon('newspaper-o', class: 'fa-fw') %>
+    <% end %>
   </td>
   <td class="col-archive-actions">
     <div class="btn-group btn-group-sm">
