--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -20,6 +20,14 @@
     </dd>
   </dl>
 <% end %>
+<% if @source %>
+  <dl class="row">
+    <dt class="col-md-2">associated with Source</dt>
+    <dd class="col-md-10">
+      <%= render partial: 'sources/oneline', locals: { source: @source } %>
+    </dd>
+  </dl>
+<% end %>
 
 <div id="archives-table">
   <table class="table table-hover table-sm" id="archives">
@@ -43,4 +51,7 @@
 </div>
 <div class="modal fade" id="storage-modal" tabindex="-1" role="dialog"
      aria-labelledby="storage-modal-label" aria-hidden="true">
+</div>
+<div class="modal fade" id="source-modal" tabindex="-1" role="dialog"
+     aria-labelledby="source-modal-label" aria-hidden="true">
 </div>
