--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -8,12 +8,17 @@
     </li>
     <li class="nav-item">
       <%= link_to archives_path, class: 'nav-link' do %>
-          <i class="fi=list"></i> <span>Archives</span>
+          <i class="fa fa-fw fa-book"></i> <span>Archives</span>
       <% end %>
     </li>
     <li class="nav-item">
       <%= link_to storages_path, class: 'nav-link' do %>
-        <i class="fi=list"></i> <span>Storages</span>
+        <i class="fa fa-fw fa-archive"></i> <span>Storages</span>
+      <% end %>
+    </li>
+    <li class="nav-item">
+      <%= link_to sources_path, class: 'nav-link' do %>
+        <i class="fa fa-fw fa-newspaper-o"></i> <span>Sources</span>
       <% end %>
     </li>
   </ul>
