[model][spec] IconicModel concern
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/sources/_oneline.html.erb
+++ b/app/views/sources/_oneline.html.erb
@@ -1,5 +1,5 @@
 <div class="oneline oneline-source">
-  <%= icon('newspaper-o', class: 'fa-fw') %>
+  <%= icon(Source::ICON, class: 'fa-fw') %>
   <span class="storage-title">
     <%= source.title %>
   </span>
