--- a/app/views/storages/_oneline.html.erb
+++ b/app/views/storages/_oneline.html.erb
@@ -1,5 +1,5 @@
 <div class="oneline oneline-storage">
-  <%= icon('archive', class: 'fa-fw') %>
+  <%= icon(Storage::ICON, class: 'fa-fw') %>
   <span class="storage-title">
     <%= storage.title %>
   </span>
