[view][control] display breadcrumbs
using 'breadcrumbs_on_rails' gem

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/assets/stylesheets/framework_and_overrides.scss
+++ b/app/assets/stylesheets/framework_and_overrides.scss
@@ -2,3 +2,12 @@
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+ol.breadcrumb {
+  li {
+    @extend .breadcrumb-item;
+    &:last-child {
+      @extend .active;
+    }
+  }
+}
