--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 
         </div>
         <div class="col-md-10">
+          <ol class="breadcrumb">
+            <%= render_breadcrumbs :tag => :li, :separator => '' %>
+          </ol>
           <div id="notes">
             <% if flash %>
               <%= render 'shared/flash' %>
