[feature][view] testing breadcrumbs
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -21,7 +21,7 @@
   </dl>
 <% end %>
 
-<div id="sources-table" class="row">
+<div id="sources-table">
   <table class="table table-hover table-sm" id="sources">
     <thead>
     <tr>
