--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
         </div>
         <div class="col-md-10">
-          <ol class="breadcrumb">
+          <ol id="breadcrumbs" class="breadcrumb">
             <%= render_breadcrumbs :tag => :li, :separator => '' %>
           </ol>
           <div id="notes">
