--- a/app/views/storages/index.html.erb
+++ b/app/views/storages/index.html.erb
@@ -21,7 +21,7 @@
   </dl>
 <% end %>
 
-<div id="storages-table" class="row">
+<div id="storages-table">
   <table class="table table-hover table-sm" id="storages">
     <thead>
     <tr>
