--- a/app/views/storages/_storage.html.erb
+++ b/app/views/storages/_storage.html.erb
@@ -2,7 +2,7 @@
   <td class="col-storage-title"><%= storage.title %></td>
   <td class="col-storage-notes"><%= storage.notes %></td>
   <td class="col-storage-assoc">
-    <%= link_to storage_archives_path(storage_id: storage.id),
+    <%= link_to archives_path(storage_id: storage.id),
                 class: 'btn btn-sm btn-secondary',
                 title: "show #{Archive.model_name.plural.humanize} linked",
                 data: { toggle: 'tooltip' } do %>
