--- a/app/views/storages/_show.html.erb
+++ b/app/views/storages/_show.html.erb
@@ -1,18 +1,22 @@
 <div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
+  <div class="modal-content card">
+    <h4 id="storage-modal-label" class="card-header">
+      <%= Storage.model_name.human %>
+      <span class="tag tag-default">ID: <%= @storage.id %></span>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      <h4 class="modal-title" id="storage-modal-label">
-        <%= Storage.model_name.human %>
-        <label class="label secondary">ID: <%= @storage.id %></label>
-      </h4>
-    </div>
-    <div class="modal-body">
+    </h4>
+    <div class="card-block">
       <div class="container-fluid">
         <%= render partial: 'storages/inner_show', locals: { storage: @storage, native: true } %>
       </div>
+    </div>
+    <div class="card-footer">
+      <button type="button" class="btn btn-sm btn-default pull-right" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        Close
+      </button>
     </div>
   </div>
 </div>
