--- a/app/views/sources/form/_scaffold.html.erb
+++ b/app/views/sources/form/_scaffold.html.erb
@@ -1,27 +1,21 @@
 <div class="modal-dialog modal-lg" role="document">
-  <div class="modal-content">
+  <div class="modal-content card">
     <%= form_for @source do |f| %>
-      <div class="modal-header">
+      <h4 id="source-modal-label" class="card-header bg-primary">
+        <%= action_name.humanize %> Source
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h4 class="modal-title" id="source-modal-label"><%= action_name.humanize %> Source</h4>
-      </div>
-      <div class="modal-body">
+      </h4>
+      <div class="card-block">
         <div class="container-fluid">
           <%= render partial: 'sources/form/own_fields', locals: { f: f } %>
           <div id="source-form-nested-fields">
           </div>
         </div>
       </div>
-      <div class="modal-footer">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12 text-xs-center">
-              <%= f.submit class: 'btn btn-sm btn-primary', data: { close: '' } %>
-            </div>
-          </div>
-        </div>
+      <div class="card-footer bg-primary">
+        <%= f.submit class: 'btn btn-sm btn-primary pull-right', data: { close: '' } %>
       </div>
     <% end %>
   </div>
