--- a/app/views/archives/form/_scaffold.html.erb
+++ b/app/views/archives/form/_scaffold.html.erb
@@ -1,16 +1,16 @@
 <div class="modal-dialog modal-lg" role="document">
   <div class="modal-content card">
-    <%= form_for @source do |f| %>
-      <h4 id="source-modal-label" class="card-header bg-primary">
-        <%= action_name.humanize %> <%= Source.model_name.human %>
+    <%= form_for @archive do |f| %>
+      <h4 id="archive-modal-label" class="card-header bg-primary">
+        <%= action_name.humanize %> <%= Archive.model_name.human %>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </h4>
       <div class="card-block">
         <div class="container-fluid">
-          <%= render partial: 'sources/form/own_fields', locals: { f: f } %>
-          <div id="source-form-nested-fields">
+          <%= render partial: 'archives/form/own_fields', locals: { f: f } %>
+          <div id="archive-form-nested-fields">
           </div>
         </div>
       </div>
