[view] minor formatting
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/archives/_oneline.html.erb
+++ b/app/views/archives/_oneline.html.erb
@@ -3,9 +3,7 @@
   <span class="archive-title">
     <%= archive.title %>
   </span>
-  <span class="archive-actions">
-    <div class="btn-group btn-group-sm">
-      <%= link_to_show_entity archive %>
-    </div>
-  </span>
+  <div class="archive-actions btn-group btn-group-sm">
+    <%= link_to_show_entity archive %>
+  </div>
 </div>
