--- a/app/views/sources/_oneline.html.erb
+++ b/app/views/sources/_oneline.html.erb
@@ -3,9 +3,7 @@
   <span class="storage-title">
     <%= source.title %>
   </span>
-  <span class="source-actions">
-    <div class="btn-group btn-group-sm">
-      <%= link_to_show_entity source %>
-    </div>
-  </span>
+  <div class="source-actions btn-group btn-group-sm">
+    <%= link_to_show_entity source %>
+  </div>
 </div>
