--- a/app/views/storages/_oneline.html.erb
+++ b/app/views/storages/_oneline.html.erb
@@ -3,9 +3,7 @@
   <span class="storage-title">
     <%= storage.title %>
   </span>
-  <span class="storage-actions">
-    <div class="btn-group btn-group-sm">
-      <%= link_to_show_entity storage %>
-    </div>
-  </span>
+  <div class="storage-actions btn-group btn-group-sm">
+    <%= link_to_show_entity storage %>
+  </div>
 </div>
