--- a/app/views/archives/form/_nested_storage_fields.html.erb
+++ b/app/views/archives/form/_nested_storage_fields.html.erb
@@ -11,7 +11,7 @@
     </span>
   </label>
   <div class="col-md-9">
-    <ul class="list-group list-group-flush">
+    <ul id="associate-storages" class="list-group list-group-flush">
       <% @archive.storages.each do |storage| %>
         <li id="associated-storage-<%= storage.id %>" class="list-group-item form-control">
           <%= storage.title %>
@@ -29,13 +29,13 @@
           </span>
         </li>
       <% end %>
-      <li id="associate-storage-add" class="list-group-item form-control">
+      <li id="associate-storage-add" class="list-group-item">
         <% if @free_storages.count > 0 %>
           <div class="form-group input-group">
             <%= text_field nil,
                            nil,
                            id: 'assoc-storage-input',
-                           class: 'form-control pull-left',
+                           class: 'form-control form-control-sm',
                            type: 'text',
                            list: 'free-storages',
                            placeholder: 'Search for non-associated Storage' %>
@@ -46,16 +46,18 @@
                                 data: {'storage-id': storage.id } %>
               <% end %>
             <% end %>
-            <%= content_tag :a,
-                            icon('search', class: 'fa-fw'),
-                            id: 'btn-show-selected-storage-details',
-                            class: 'input-group-addon btn btn-outline-info',
-                            role: 'button' %>
-            <%= content_tag :a,
-                            icon('plus', class: 'fa-fw'),
-                            id: 'btn-associate-selected-storage',
-                            class: 'input-group-addon btn btn-primary',
-                            role: 'button' %>
+            <div class="input-group-btn">
+              <%= content_tag :a,
+                              icon('search', class: 'fa-fw'),
+                              id: 'btn-show-selected-storage-details',
+                              class: 'btn btn-sm btn-outline-info',
+                              role: 'button' %>
+              <%= content_tag :a,
+                              icon('plus', class: 'fa-fw'),
+                              id: 'btn-associate-selected-storage',
+                              class: 'btn btn-sm btn-primary',
+                              role: 'button' %>
+            </div>
           </div>
         <% else %>
           no unassociated Storages
