--- a/app/views/sources/form/_nested_fields.html.erb
+++ b/app/views/sources/form/_nested_fields.html.erb
@@ -11,7 +11,7 @@
     </span>
   </label>
   <div class="col-md-9">
-    <ul class="list-group list-group-flush">
+    <ul id="associate-archives" class="list-group list-group-flush">
       <% @source.archives.each do |archive| %>
         <li id="associated-archive-<%= archive.id %>" class="list-group-item form-control">
           <%= archive.title %>
@@ -29,13 +29,13 @@
           </span>
         </li>
       <% end %>
-      <li id="associate-archive-add" class="list-group-item form-control">
+      <li id="associate-archive-add" class="list-group-item">
         <% if @free_archives.count > 0 %>
           <div class="form-group input-group">
             <%= text_field nil,
                            nil,
                            id: 'assoc-archive-input',
-                           class: 'form-control pull-left',
+                           class: 'form-control form-control-sm',
                            type: 'text',
                            list: 'free-archives',
                            placeholder: 'Search for non-associated Archive' %>
@@ -44,16 +44,18 @@
                 <%= content_tag :option, archive.title, data: {'archive-id': archive.id } %>
               <% end %>
             <% end %>
-            <%= content_tag :a,
-                            icon('search', class: 'fa-fw'),
-                            id: 'btn-show-selected-archive-details',
-                            class: 'input-group-addon btn btn-outline-info',
-                            role: 'button' %>
-            <%= content_tag :a,
-                            icon('plus', class: 'fa-fw'),
-                            id: 'btn-associate-selected-archive',
-                            class: 'input-group-addon btn btn-primary',
-                            role: 'button' %>
+            <div class="input-group-btn">
+              <%= content_tag :a,
+                              icon('search', class: 'fa-fw'),
+                              id: 'btn-show-selected-archive-details',
+                              class: 'btn btn-sm btn-outline-info',
+                              role: 'button' %>
+              <%= content_tag :a,
+                              icon('plus', class: 'fa-fw'),
+                              id: 'btn-associate-selected-archive',
+                              class: 'btn btn-sm btn-primary',
+                              role: 'button' %>
+            </div>
           </div>
         <% else %>
           no unassociated Archives
