--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Archives
+  <%= model_name_with_icon Archive, :plural %>
   <span class="btn-group">
     <%= link_to new_archive_path,
                 class: 'btn btn-sm btn-primary',
