[view] refactor to use new helpers wherever sane
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/archives/_nested_show.html.erb
+++ b/app/views/archives/_nested_show.html.erb
@@ -1,5 +1,6 @@
 <li class="list-group-item">
   <div id="archive-<%= archive.id %>" class="list-group-item-heading" role="tab">
+    <%= icon_for Archive %>
     <%= archive.title %>
     (<%= archive.abbr %>)
     <a class="pull-right btn btn-sm collapsed"
