--- a/app/views/archives/_oneline.html.erb
+++ b/app/views/archives/_oneline.html.erb
@@ -1,5 +1,5 @@
 <div class="oneline oneline-archive">
-  <%= icon(Archive::ICON, class: 'fa-fw') %>
+  <%= icon_for Archive %>
   <span class="archive-title">
     <%= archive.title %>
   </span>
