--- a/app/views/sources/_nested_show.html.erb
+++ b/app/views/sources/_nested_show.html.erb
@@ -1,5 +1,6 @@
 <li class="list-group-item">
   <div id="source-<%= source.id %>" class="list-group-item-heading" role="tab">
+    <%= icon_for Source %>
     <%= source.title %>
     <a class="pull-right btn btn-sm collapsed"
        aria-controls="source-<%= source.id %>-content"
