--- a/app/views/sources/_oneline.html.erb
+++ b/app/views/sources/_oneline.html.erb
@@ -1,5 +1,5 @@
 <div class="oneline oneline-source">
-  <%= icon(Source::ICON, class: 'fa-fw') %>
+  <%= icon_for Source %>
   <span class="storage-title">
     <%= source.title %>
   </span>
