--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Sources
+  <%= model_name_with_icon Source, :plural %>
   <span class="btn-group">
     <%= link_to new_source_path,
                 class: 'btn btn-sm btn-primary',
