--- a/app/views/storages/_nested_show.html.erb
+++ b/app/views/storages/_nested_show.html.erb
@@ -1,5 +1,6 @@
 <li class="list-group-item">
   <div id="storage-<%= storage.id %>" class="list-group-item-heading" role="tab">
+    <%= icon_for Storage %>
     <%= storage.title %>
     <a class="pull-right btn btn-sm collapsed"
        aria-controls="storage-<%= storage.id %>-content"
