--- a/app/views/storages/form/_nested_fields.html.erb
+++ b/app/views/storages/form/_nested_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="row form-group">
   <label class="col-md-3 form-control-label">
-    <%= Archive.model_name.plural.humanize %>
+    <%= model_name_with_icon Archive, :plural %>
     <span class="pull-right">
       <%= content_tag :a,
                       icon('refresh', class: 'fa-fw'),
