--- a/app/views/storages/index.html.erb
+++ b/app/views/storages/index.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Storages
+  <%= model_name_with_icon Storage, :plural %>
   <span class="btn-group">
     <%= link_to new_storage_path,
                 class: 'btn btn-sm btn-primary',
