--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -25,9 +25,9 @@
   <table class="table table-hover table-sm" id="sources">
     <thead>
     <tr>
-      <th class="col-source-title">Title</th>
-      <th class="col-source-type">Source Type</th>
-      <th class="col-source-notes">Notes</th>
+      <th class="col-source-title"><%= Source.human_attribute_name :title %></th>
+      <th class="col-source-type"><%= Source.human_attribute_name :source_type %></th>
+      <th class="col-source-notes"><%= Source.human_attribute_name :notes %></th>
       <th class="col-source-assoc">Associations</th>
       <th class="col-source-actions">Actions</th>
     </tr>
