--- a/app/views/storages/index.html.erb
+++ b/app/views/storages/index.html.erb
@@ -25,8 +25,8 @@
   <table class="table table-hover table-sm" id="storages">
     <thead>
     <tr>
-      <th class="col-storage-title">Title</th>
-      <th class="col-storage-notes">Notes</th>
+      <th class="col-storage-title"><%= Storage.human_attribute_name :title %></th>
+      <th class="col-storage-notes"><%= Storage.human_attribute_name :notes %></th>
       <th class="col-storage-assoc">Associations</th>
       <th class="col-storage-actions">Actions</th>
     </tr>
