[spec] for ContentTranslation controller and views
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/content_translations/index.html.erb
+++ b/app/views/content_translations/index.html.erb
@@ -12,8 +12,8 @@
   </span>
 </h1>
 
-<div id="contents-table">
-  <table class="table table-hover table-sm" id="contents">
+<div id="content-translations-table">
+  <table class="table table-hover table-sm" id="content-translations">
     <thead>
     <tr>
       <th class="col-content-language"><%= ContentTranslation.human_attribute_name :language %></th>
