--- a/app/views/contents/_inner_show.html.erb
+++ b/app/views/contents/_inner_show.html.erb
@@ -13,4 +13,10 @@
   </div>
 </div>
 <% if native %>
+  <div class="row">
+    <label class="col-md-3"><strong><%= Content.human_attribute_name :translations %></strong></label>
+    <ul class="col-md-9 list-group list-group-flush" id="content-content-translations-accordion" role="tablist" aria-multiselectable="true">
+      <%= render partial: 'content_translations/nested_show', collection: content.translations, as: :content_translation %>
+    </ul>
+  </div>
 <% end %>
