--- a/app/views/sources/_source.html.erb
+++ b/app/views/sources/_source.html.erb
@@ -8,7 +8,7 @@
                 title: "show #{Archive.model_name.plural.humanize} linked",
                 data: { toggle: 'tooltip' } do %>
       <%= source.archives.count %>
-      <%= icon('book', class: 'fa-fw') %>
+      <%= icon_for Archive %>
     <% end %>
   </td>
   <td class="col-source-actions">
