--- a/app/views/storages/_storage.html.erb
+++ b/app/views/storages/_storage.html.erb
@@ -7,7 +7,7 @@
                 title: "show #{Archive.model_name.plural.humanize} linked",
                 data: { toggle: 'tooltip' } do %>
       <%= storage.archives.count %>
-      <%= icon('book', class: 'fa-fw') %>
+      <%= icon_for Archive %>
     <% end %>
   </td>
   <td class="col-storage-actions">
